fix(`ComboBox`): ensure `Popover` width relates to the `Group` wrapping `ComboBox.Input` (#144)
* fix(`ComboBox`): ensure `Popover` width relates to the `Group` wrapping `ComboBox.Input`

* fix(`ComboBox`): prevent horizontal shift when list is scrollable

--- a/src/popover/styles.css
+++ b/src/popover/styles.css
@@ -31,6 +31,7 @@
     color: var(--popover-text-color);
     outline: none;
     box-sizing: border-box;
+    overflow: hidden;
 
     @media (prefers-reduced-motion: no-preference) {
         &[data-entering] {
